test/param/ferguson/mismatched-param-type-error.good
mismatched-param-type-error.chpl:6: In function 'main':
mismatched-param-type-error.chpl:10: error: Cannot assign to G1(1) from G1(1:uint(64))
